move forward done in addition to some helper methods